tests/circuits/invalids/two_links_in_input.nts
.chipsets:
input   a
input   b
output  s
.links:
a:1     s:1
b:1     s:1